# lifegameboy

./: Cargo.toml  Makefile  README.md  arm-none-eabi.json  linker-boot.ld  linker.ld  linkerr-boot.ld
libusb-compat-0.1.5/: Makefile  config.h  config.status  libtool  libusb.pc
libusb-compat-0.1.5/examples/: Makefile
libusb-compat-0.1.5/libusb/: Makefile  libusb.la  libusb_la-core.lo
libusb-compat-0.1.5/libusb/.deps/: libusb_la-core.Plo
libusb-compat-0.1.5/libusb/.libs/: libusb-0.1.so.4.4.4  libusb.la  libusb.lai
optusb/: Makefile  optusb  optusb.c  usb.h
src/: crt0.S  game.rs  main.rs
