[package]
name = "lifegameboy"
version = "0.1.0"
authors = ["bokuweb <bokuweb12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = { version = "0.8.6", default_features = false }

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = 'abort'
lto = true